--- a/wp-content/themes/themedebase/style.css
+++ b/wp-content/themes/themedebase/style.css
@@ -1340,4 +1340,21 @@ a {
 #modal__content {
   background-color: #fae3d9;
 }
+/*premiere nouvelle*/
+.itemP__nouvelle__n1 {
+  z-index: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border-radius: 20px;
+  font-size: 18px;
+  text-shadow: 3px 3px 3px black;
+  color: #fff;
+  background-color: none;
+  margin-top: 40px;
+}
+
 /*# sourceMappingURL=main.css.map */
