--- a/wp-content/themes/themedebase/style.css
+++ b/wp-content/themes/themedebase/style.css
@@ -211,6 +211,7 @@ main {
   position: relative;
   margin: 0px;
   width: 100%;
+  height: 100vh;
 }
 
 .imgLandscape,
@@ -1341,20 +1342,7 @@ a {
   background-color: #fae3d9;
 }
 /*premiere nouvelle*/
-.itemP__nouvelle__n1 {
-  z-index: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  border-radius: 20px;
-  font-size: 18px;
-  text-shadow: 3px 3px 3px black;
-  color: #fff;
-  background-color: none;
-  margin-top: 40px;
+#nouvelle1 {
+  background-color: rgba(0, 0, 255, 0);
 }
-
 /*# sourceMappingURL=main.css.map */
