--- a/wp-content/themes/themedebase/style.css
+++ b/wp-content/themes/themedebase/style.css
@@ -1024,7 +1024,6 @@ ul {
 .section__nouvelles .item__nouvelle .lienItemP__nouvelle .itemP__nouvelle {
   z-index: 1;
   position: absolute;
-  top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
@@ -1034,6 +1033,10 @@ ul {
   text-shadow: 3px 3px 3px black;
   color: #fff;
   background-color: rgba(239, 164, 139, 0.5);
+  margin: 0 auto;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .section__nouvelles
   .item__nouvelle
@@ -1047,7 +1050,7 @@ ul {
 .itemP__nouvelle__01 p {
   cursor: pointer;
   position: relative;
-  top: 35%;
+  top: 30%;
 }
 
 .item__nouvelle:hover {
@@ -1344,5 +1347,10 @@ a {
 /*premiere nouvelle*/
 #nouvelle1 {
   background-color: rgba(0, 0, 255, 0);
+  font-weight: bolder;
+}
+
+.item__nouvelle.hidden {
+  display: none;
 }
 /*# sourceMappingURL=main.css.map */
